lien image update

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div>
                         <div id="photo">
                             <img
-                                src="../pfi/images/louis.jpg"
+                                src="images/louis.jpg"
                                 alt="Ma photo"
                             >
                         </div>
