Correction lien images

--- a/horaire.html
+++ b/horaire.html
@@ -506,7 +506,7 @@
                         </div>
                         <div>
                             <img
-                                src="../pfi/images/linux.webp"
+                                src="images/linux.webp"
                                 alt="LogoLinux"
                                 id="image1"
                             >
@@ -569,7 +569,7 @@
                         </div>
                         <div>
                             <img
-                                src="../pfi/images/csharp.png"
+                                src="images/csharp.png"
                                 alt="Code Programmation"
                                 id="image2"
                             >
