--- a/kb2plus.html
+++ b/kb2plus.html
@@ -135,7 +135,7 @@
                     <p>Son iconique de Metal Gear Solid!</p>
                     <audio controls>
                         <source
-                            src="../pfi/images/MetalGearSolidAlert(!).mp3"
+                            src="images/metalgearsolidalert(!).mp3"
                             type="audio/mpeg"
                         >
                         Si vous voyez ceci, cela signifie que votre explorateur
